tests/pos/TokenType.hs
module TokenType where


data TokenType = Foo | CChar


{-@ bar :: Char @-}
bar :: Char
bar = undefined
